k8s/fpm.yaml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: fpm
spec:
  selector:
    matchLabels:
      app: fpm
  replicas: 2
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: fpm
    spec:
      containers:
      - name: fpm
        image: localhost:32000/autonet6:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "16Mi"
            cpu: "1m"
          limits:
            memory: "128Mi"
            cpu: "20m"
---
kind: Service
apiVersion: v1
metadata:
  name: fpm
spec:
  selector:
    app: fpm
  type: NodePort
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
