k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nginx-ingress
spec:
  tls:
    - hosts:
        - jonathan
  rules:
  - host: jonathan
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
      alpn:
        - h2
        - http/1.1
        - http/1.0
